--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ float:left;
     object-position: center;
   border: 3px solid #00FF41; /* මැට්‍රික්ස් කොළ පාට */
     border-radius: 5px; 
-    box-shadow: 0 0 15px #00FF41; animation: flicker 0.1s infinite;
+    box-shadow: 0 0 15px #00FF41; 
 ">
 <div class="tst">
 
@@ -110,7 +110,7 @@ float:left;
         position: absolute; 
         top: 480px; 
         left: 0; 
-        width: 100%; 
+        width: 90%; 
         height: 84px; 
         background-color: black; 
         z-index: 10;
@@ -118,11 +118,13 @@ float:left;
         display: flex;
         align-items: center;
         justify-content: center;
-        font-weight: bold;">
+        font-weight: bold;border: 3px solid #00FF41; /* මැට්‍රික්ස් කොළ පාට */
+    border-radius: 5px; 
+    box-shadow: 0 0 15px #00FF41;">
         CREATED BY<BR> THEEKSHANA 
     </div>
 
-    <iframe src="https://youtubeurlthikka.created.app/" width="100%"height="550px" style="border: 8px ridge #62589c; border-radius: 10px;display: block;"></iframe>
+    <iframe src="https://youtubeurlthikka.created.app/" width="100%"height="550px" style="border: 8px ridge #62589c; border-radius: 10px;display: block;position: relative; float: right; width: 680px; margin-right: 40px;"allowfullscreen></iframe>
 
 </div>
 
