--- a/index.html
+++ b/index.html
@@ -7,30 +7,33 @@
 body {
   background-color: #30C5FF;
   margin: 0;
+  padding: 0;
   width: 100%;
-  overflow-x: hidden; /* දෙපැත්තට scroll වීම නැති කිරීමට */
+  overflow-x: hidden;
+  font-family: sans-serif;
 }
 
-/* Hacking Style Animation */
 @keyframes flicker {
     0% { opacity: 1; }
     50% { opacity: 0.8; }
     100% { opacity: 1; }
 }
 
+/* PC Version Styles */
 .tst {
-  width: 30%; /* PC එකේදී වම් පැත්තේ ඉඩ */
+  width: 30%; 
   float: left;
 }
 
-/* Video එක තියෙන container එක */
 .video-wrap {
   position: relative; 
   float: right; 
   width: 680px; 
-  margin-right: 40px; /* PC එකේදී දකුණෙන් ඉඩ තැබීමට */
+  margin-right: 40px; 
+  margin-top: 20px;
 }
 
+/* --- MOBILE FIXES (මෙන්න මෙතන තමයි වැඩේ තියෙන්නේ) --- */
 @media screen and (max-width: 800px) {
     .tst {
         width: 100% !important;
@@ -38,19 +41,24 @@ body {
     }
     
     .video-wrap {
-        width: 95% !important; /* Mobile එකේදී 95% පළල */
+        width: 95% !important; /* දෙපැත්තෙන් පොඩ්ඩක් ඉඩ තබා මැදට ගනී */
         float: none !important;
-        margin: 0 auto !important; /* Mobile එකේදී හරියටම මැදට */
+        margin: 10px auto 40px auto !important; /* උඩට සහ යටට ඉඩ තැබුවා */
+        display: block;
     }
 
     .video-wrap iframe {
-        height: 400px !important; /* Mobile එකේදී වීඩියෝ උස අඩු කිරීම */
+        height: 300px !important; /* Mobile එකේදී වීඩියෝ එකේ උස ගානට අඩු කළා */
+        width: 100% !important;
     }
     
     .label-box {
+        position: absolute !important;
         top: auto !important;
-        bottom: 10px !important;
-        width: 100% !important;
+        bottom: 15px !important; /* වීඩියෝවේ පතුලේම ඇලවේ */
+        width: 92% !important;
+        height: 60px !important;
+        font-size: 14px !important;
     }
 }
 </style>
@@ -65,7 +73,6 @@ body {
     object-fit: contain; 
     display: block; 
     margin: 10px auto 20px auto; 
-    object-position: center;
     border: 3px solid #00FF41; 
     border-radius: 5px; 
     box-shadow: 0 0 15px #00FF41;
@@ -79,30 +86,31 @@ body {
 
     <div class="label-box" style="
         position: absolute; 
-        top: 455px; 
+        top: 450px; 
         left: 50%;
-        transform: translateX(-50%); /* මැදටම Align කිරීමට */
+        transform: translateX(-50%);
         width: 90%; 
         height: 80px; 
-        background-color: black; 
+        background-color: rgba(0,0,0,0.9); /* කළු පාට වැඩිකළා ලස්සන වෙන්න */
         z-index: 10;
         color: #30C5FF;
         display: flex;
         align-items: center;
         justify-content: center;
+        text-align: center;
         font-weight: bold;
         border: 2px solid #00FF41;
         border-radius: 5px;
         box-shadow: 0 0 10px #00FF41;
-        pointer-events: auto; 
-        cursor: not-allowed; ">
+        pointer-events: auto; /* Click block කරනවා */
+        cursor: not-allowed;">
         CREATED BY<BR> THEEKSHANA 
     </div>
 
     <iframe src="https://youtubeurlthikka.created.app/" 
         width="100%" 
         height="550px" 
-        style="border: 8px ridge #62589c; border-radius: 10px; display: block;" 
+        style="border: 6px ridge #62589c; border-radius: 10px; display: block; box-sizing: border-box;" 
         allowfullscreen>
     </iframe>
 
